Several bug fixes and comments added to the code